--- a/index.html
+++ b/index.html
@@ -1,57 +1,40 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>BMI Calculator</title>
+  </head>
 
-  <head>
+  <body>
+    <div class="container">
+      <h1>BMI Calculator</h1>
+      <form>
+        <p>
+          <label for="height">Height in CM: </label>
+          <input type="text" id="height" />
+        </p>
 
-    <meta charset="UTF-8" />
+        <p>
+          <label for="weight">Weight in KG: </label>
+          <input type="text" id="weight" />
+        </p>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <button type="button" onclick="calculateBMI()">Calculate</button>
 
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <div id="results"></div>
 
-    <link rel="stylesheet" href="style.css" />
+        <div id="weight-guide">
+          <h3>BMI Weight Guide</h3>
+          <p>Under Weight = Less than 18.6</p>
+          <p>Normal Range = 18.6 and 24.9</p>
+          <p>Overweight = Greater than 24.9</p>
+        </div>
+      </form>
+    </div>
 
-    <link rel="stylesheet" href="../styles.css" />
-
-    <title>BMI Calculator</title>
-
-  </head>
-
-  <body>
-
-
-
-    <div class="container">
-
-      <h1>BMI Calculator</h1>
-
-      <form>
-
-        <p><label>Height in CM: </label><input type="text" id="height" /></p>
-
-        <p><label>Weight in KG: </label><input type="text" id="weight" /></p>
-
-        <button>Calculate</button>
-
-        <div id="results"></div>
-
-        <div id="weight-guide">
-
-          <h3>BMI Weight Guide</h3>
-
-          <p>Under Weight = Less than 18.6</p>
-
-          <p>Normal Range = 18.6 and 24.9</p>
-
-          <p>Overweight = Greater than 24.9</p>
-
-        </div>
-
-      </form>
-
-    </div>
-
-  </body>
-
-  <script src="index.js"></script>
-
+    <script src="index.js"></script>
+  </body>
 </html>
